--- a/components/view/index.css
+++ b/components/view/index.css
@@ -42,12 +42,18 @@
 .View-title--center {
   display: block;
   text-align: center;
-  font-size: 2.125rem;
+  font-size: 1.6625rem;
 }
 
 @media (min-width: 600px) {
   .View-title {
     margin-bottom: 1.5rem;
+  }
+}
+
+@media (min-width: 800px) and (min-height: 400px) {
+  .View-title--center {
+    font-size: 2em;
   }
 }
 
