--- a/components/highlight/index.css
+++ b/components/highlight/index.css
@@ -2,12 +2,17 @@
 
 /* @define Highlight */
 .Highlight {
-  display: flex;
-  margin: 6rem 0;
+  margin: 3.4rem 0;
 }
 
-.Highlight-figure {
-  flex-basis: 50%;
+@media (min-width: 800px) and (min-height: 400px) {
+  .Highlight {
+    margin: 5rem 0;
+  }
+}
+
+.Highlight-text {
+  width: 100%;
 }
 
 .Highlight-image {
@@ -15,17 +20,59 @@
   width: 100%;
 }
 
-.Highlight-text {
-  text-align: left;
-  margin-left: 0;
-}
+@media (min-width: 600px) {
+  .Highlight {
+    display: flex;
+  }
 
-.Highlight-body {
-  flex-basis: 50%;
+  .Highlight-figure {
+    margin-right: 1.5rem;
+    flex-basis: 30%;
+  }
+  
+  .Highlight-body {
+    margin-left: 1.5rem;
+    flex-basis: 70%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  .Highlight--right .Highlight-figure {
+    order: 1;
+    flex-wrap: nowrap;
+  }
+
+  .Highlight--right .Highlight-figure {
+    order: 1;
+    margin-left: 1.5rem;
+    margin-right: 0;
+  }
+
+  .Highlight--right .Highlight-body {
+    margin-right: 1.5rem;
+    margin-left: 0;
+  }
 }
 
 @media (min-width: 800px) {
+  .Highlight-figure {
+    margin-right: 2.5rem;
+    flex-basis: 50%;
+  }
+  
+  .Highlight-body {
+    margin-left: 2.5rem;
+    flex-basis: 50%;
+  }
+
   .Highlight--right .Highlight-figure {
-    order: 1;
+    margin-left: 2.5rem;
+    margin-right: 0;
+  }
+
+  .Highlight--right .Highlight-body {
+    margin-right: 2.5rem;
+    margin-left: 0;
   }
 }
