--- a/components/card/index.css
+++ b/components/card/index.css
@@ -220,13 +220,13 @@
   position: static;
 }
 
-.Card-image {
+.Card--interactive .Card-image {
   transform-origin: center;
   transition: transform 600ms cubic-bezier(0.15, 0.03, 0.2, 0.955);
   will-change: transform;
 }
 
-.Card:hover .Card-image {
+.Card--interactive:hover .Card-image {
   transform: scale(1.05);
 }
 
