Add tilt effect to cards

--- a/components/card/index.css
+++ b/components/card/index.css
@@ -3,6 +3,8 @@
 /* @define Card */
 :root {
   --Card-aspect: calc(67 / 74);
+  --Card-tiltX: 0;
+  --Card-tiltY: 0;
 }
 
 .Card {
@@ -220,16 +222,6 @@
   position: static;
 }
 
-.Card--interactive .Card-image {
-  transform-origin: center;
-  transition: transform 600ms cubic-bezier(0.15, 0.03, 0.2, 0.955);
-  will-change: transform;
-}
-
-.Card--interactive:hover .Card-image {
-  transform: scale(1.05);
-}
-
 /**
  * Link
  */
@@ -262,4 +254,24 @@
 .Card--background .Card-link {
   margin: 0;
   border: 0;
+}
+
+/**
+ * Tilt effect
+ */
+
+.Card--tilt {
+  perspective: 1000px;
+}
+
+.Card-tilt,
+.Card--tilt.Card--background .Card-content {
+  transform-origin: center;
+  transform: rotateY(calc(4deg * var(--Card-tiltX))) rotateX(calc(-4deg * var(--Card-tiltY)));
+  will-change: transform;
+}
+
+.Card.in-transition .Card-tilt,
+.Card--tilt.in-transition .Card-content {
+  transition: transform 300ms cubic-bezier(0.15, 0.03, 0.2, 0.955);
 }
