--- a/components/header/index.css
+++ b/components/header/index.css
@@ -1,8 +1,20 @@
 @import "../base";
 
+:root {
+  --Header-height: 4rem;
+}
+
 /* @define Header */
 .Header {
-  padding: 0.7rem 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 100;
+  height: var(--Header-height);
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
   background: rgb(255, 255, 255);
   box-shadow: 0 1px 0 rgba(141, 137, 165, 0.2);
   user-select: none;
@@ -16,9 +28,8 @@
 }
 
 @media (min-width: 800px) {
-  .Header {
-    height: 5rem;
-    padding: 0;
+  :root {
+    --Header-height: 5rem;
   }
 }
 
@@ -105,7 +116,7 @@
     position: absolute;
     right: -2rem;
     top: calc(100% - 0.3rem);
-    z-index: 2;
+    z-index: 102;
     font-size: 0.75rem;
     color: rgb(var(--color-lavender));
     background: rgb(255, 255, 255);
@@ -248,7 +259,6 @@
 .Header.is-open {
   width: 100%;
   position: fixed;
-  z-index: 1;
   top: 0;
   left: 0;
 }
@@ -269,4 +279,25 @@
   bottom: 0;
   transition: bottom 100ms ease, transform 100ms cubic-bezier(0.215, 0.61, 0.355, 1) 0.12s;
   transform: rotate(-90deg);
+}
+
+/**
+ * Animate in
+ */
+
+@supports (animation: auto) {
+  .Header.is-animate {
+    transform: translateY(-100%);
+    animation: Header-slide-down 400ms 200ms cubic-bezier(0.25, 0.46, 0.45, 0.94) forwards;
+  }
+}
+
+@keyframes Header-slide-down {
+  0% {
+    transform: translateY(-100%);
+  }
+
+  100% {
+    transform: translateY(0);
+  }
 }
