--- a/components/hero/index.css
+++ b/components/hero/index.css
@@ -105,7 +105,7 @@
   margin-bottom: 15vh;
 }
 
-.Hero--fill {
+.Hero--rotating {
   min-height: 80vh;
   display: flex;
 }
@@ -128,6 +128,10 @@
   background: rgba(0, 0, 0, 0.3);
 }
 
+.Hero--rotating .Hero-wrap::after {
+  background: rgba(var(--color-royal), 0.6);
+}
+
 .Hero-image {
   width: 100%;
   height: 100%;
@@ -147,13 +151,13 @@
 }
 
 @media (min-width: 500px) {
-  .Hero--fill {
+  .Hero--rotating {
     min-height: 80vh;
   }
 }
 
 @media (min-width: 800px) {
-  .Hero--fill {
+  .Hero--rotating {
     min-height: auto;
     display: block;
   }
