--- a/components/header/index.css
+++ b/components/header/index.css
@@ -34,7 +34,7 @@
 }
 
 /**
- * Logotype
+ * Logo
  */
 
 .Header-home {
@@ -51,12 +51,12 @@
 .Header-logo {
   width: 4.37em;
   float: left;
-  margin: 0.20em 0.5em 0 0;
+  margin: 0.05em 0.5em 0 0;
   color: rgb(var(--color-orange));
 }
 
 .Header-logotype {
-  width: 5.27em;
+  width: 4.77em;
   position: relative;
 }
 
